--- a/app/build.gradle
+++ b/app/build.gradle
@@ -2,6 +2,7 @@ plugins {
     id 'com.android.application'
 }
 
+
 android {
     namespace 'com.example.weatherforecast'
     compileSdk 33
@@ -36,4 +37,10 @@ dependencies {
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.5'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'
+
+
+    //doc json
+    implementation 'com.android.volley:volley:1.2.1'
+    //chuyen anh Picasso.get().load("https://i.imgur.com/DvpvklR.png").into(imageView);
+    implementation 'com.squareup.picasso:picasso:2.8'
 }
