read data today-forecast

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -43,4 +43,8 @@ dependencies {
     implementation 'com.android.volley:volley:1.2.1'
     //chuyen anh Picasso.get().load("https://i.imgur.com/DvpvklR.png").into(imageView);
     implementation 'com.squareup.picasso:picasso:2.8'
+    //load image
+    implementation 'com.github.bumptech.glide:glide:4.12.0'
+    annotationProcessor 'com.github.bumptech.glide:compiler:4.12.0'
+    implementation 'jp.wasabeef:glide-transformations:4.3.0'
 }
